src/parser/tests/parse_errors/snapshots/rusty__parser__tests__parse_errors__parse_error_messages_test__if_then_with_unexpected_token.snap
---
source: src/parser/tests/parse_errors/parse_error_messages_test.rs
expression: diagnostics
---
error[E006]: Missing expected Token `THEN`
  ┌─ <internal>:3:17
  │
3 │         IF TRUE CHARLIE
  │                 ^^^^^^^ Missing expected Token `THEN`

error[E007]: Unexpected token: expected `;` but found 'x'
  ┌─ <internal>:4:13
  │
4 │             x;
  │             ^ Unexpected token: expected `;` but found 'x'

error[E048]: Could not resolve reference to CHARLIE
  ┌─ <internal>:3:17
  │
3 │         IF TRUE CHARLIE
  │                 ^^^^^^^ Could not resolve reference to CHARLIE

error[E048]: Could not resolve reference to y
  ┌─ <internal>:6:13
  │
6 │             y;
  │             ^ Could not resolve reference to y
